# Snowplow-Routing-Middleton

./: .gitignore  README.md  pyproject.toml
Snowplow-Routing-Middleton/: calculate_passes.ipynb  construction.py  costs.py  crossover.py  dual_graphs.py  folium_plotting.ipynb  genetic.py  initialize.py  linked_list.py  local_search.py  main.py  params.py  plotting.py  routes_representations.py  routestep.py  shortest_paths.py  solution.py  testing.ipynb  toy_testing.ipynb  turns.py
Snowplow-Routing-Middleton/graph_data/: OSMWithData.gpkg  edges.csv  nodes.csv  preds_and_dists.pickle  shortest_distances_array.npy
Snowplow-Routing-Middleton/sectioning_streets/: sectioning.py
Snowplow-Routing-Middleton/solutions/: m_blue.pickle  m_green.pickle  m_orange.pickle  m_red.pickle  routes_blue.pickle  routes_green.pickle  routes_orange.pickle  routes_red.pickle
Snowplow-Routing-Middleton/testing/: toy_testing.ipynb
Snowplow_Routing_Middleton/: construction.py  costs.py  crossover.py  dual_graphs.py  genetic.py  initialize.py  local_search.py  main.py  params.py  plotting.py  routes_representations.py  sectioning.py  shortest_paths.py  solution.py  turns.py
Snowplow_Routing_Middleton/graph_data/: full_streets_graph.pickle  shortest_distances_array.npy  streets_graph.pickle
Snowplow_Routing_Middleton/solutions/: blue_dynamic.html  blue_static.html  green_static.html  m_blue.pickle  m_green.pickle  m_orange.pickle  m_red.pickle  orange_static.html  red_static.html  routes_blue.pickle  routes_green.pickle  routes_orange.pickle  routes_red.pickle  solution_blue.pickle  (+3 more)
(+11 files in other folders)
