[tool.poetry]
name = "snowplow-routing-middleton"
version = "0.1.0"
description = "Environment for the snowplow routing project"
authors = ["Ian1528 <102779366+Ian1528@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
