[tool.poetry]
name = "snowplow-routing-middleton"
version = "0.1.0"
description = "Environment for the snowplow routing project"
authors = ["Ian1528 <102779366+Ian1528@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
networkx = "^3.3"
osmnx = "^1.9.3"
geopandas = "^0.14.4"
folium = "^0.17.0"
mapclassify = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
